kubernetes: do not disable node routes for portmap
[ upstream commit bebc59d2263b61484a0c5d330e35f794fd0bfbc7 ]

Since not all CNIs handle routing, e.g. portmap, we should still keep
`enable-local-node-route` set to true in the portmap case as this CNI
does not create any routes automatically.

Signed-off-by: André Martins <andre@cilium.io>
Signed-off-by: vagrant <vagrant@runtime1>

--- a/install/kubernetes/cilium/charts/config/templates/configmap.yaml
+++ b/install/kubernetes/cilium/charts/config/templates/configmap.yaml
@@ -227,10 +227,12 @@ data:
   #  - portmap (Enables HostPort support for Cilium)
   cni-chaining-mode: {{ .Values.global.cni.chainingMode }}
 
+{{- if ne .Values.global.cni.chainingMode "portmap" }}
   # Disable the PodCIDR route to the cilium_host interface as it is not
   # required. While chaining, it is the responsibility of the underlying plugin
   # to enable routing.
   enable-local-node-route: "false"
+{{- end }}
 {{- end }}
 
   masquerade: {{ .Values.global.masquerade | quote }}
